# Skweezy-AI

./: GenUtils.py  README.md  YTutilities.py  app.py  clean_reqs.txt  pyproject.toml  requirements.txt  test.py
components/: scroll_button.html
